--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
     background: bisque;
 }
+.flex-container{
+    display: flex;
+    background-color: rgb(170, 165, 165);
+    justify-content: space-around;
+    align-items: center;
+    margin: 2px;
+    border-radius: 50px;
+    height: 50px;
