--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     background-color: rgb(170, 165, 165);
     justify-content: space-around;
     align-items: center;
-    margin: 2px;
+    margin: 1px;
     border: 5px solid;
     border-radius: 50px;
     height: 50px;
@@ -18,3 +18,8 @@ body {
     padding: 2vw;
     margin: 5px; 
 }
+@media screen and (min-width: 768px) {
+    .flex-container{
+        background-color: black;
+    }
+    }
