--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 .flex-container{
     display: flex;
     background-color: rgb(170, 165, 165);
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: 1px;
     border: 5px solid;
@@ -13,13 +13,19 @@ body {
 }
 
 .flex-item{
+    background: wheat;
     border: 5px dotted ;
     border-radius: 10px;
-    padding: 2vw;
+    padding: 2%;
     margin: 5px; 
 }
 @media screen and (min-width: 768px) {
     .flex-container{
         background-color: black;
+    }
+
+    .flex-item{
+        background: white;
+        border: solid;
     }
     }
