--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,20 @@ body {
 }
 .flex-container{
     display: flex;
+    flex-wrap: wrap;
     background-color: rgb(170, 165, 165);
     justify-content: space-between;
     align-items: center;
     margin: 1px;
     border: 5px solid;
     border-radius: 50px;
-    height: 50px;
 }
 
 .flex-item{
     background: wheat;
     border: 5px dotted ;
     border-radius: 10px;
-    padding: 2%;
+    padding: 50px;
     margin: 5px; 
 }
 @media screen and (min-width: 768px) {
